[package]
name = "glsl2hlsl"
version = "0.1.0"
authors = ["Pema Malling <pemamalling@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glsl = "7.0.0"
ureq = { version = "2.12.1", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
md5 = "0.7.0"
getrandom = { version = "0.2.15", features = ["js"] }

[workspace]
members = ["glsl2hlsl-wasm"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
